--- a/src/app/modules/ingresos/pages/listar-ingresos/listar-ingresos.html
+++ b/src/app/modules/ingresos/pages/listar-ingresos/listar-ingresos.html
@@ -15,7 +15,7 @@
                 <div class="filter-group">
                     <label class="filter-label">Fecha</label>
                     <select class="search-input" [(ngModel)]="filtroFecha" (ngModelChange)="filtrar()">
-            <option value="TODAS">📅 Todas</option>
+            <option value="TODAS">Todas</option>
             <option value="HOY">Hoy</option>
             <option value="SEMANA">Última semana</option>
             <option value="MES">Último mes</option>
