--- a/src/app/modules/clientes/pages/crear-cliente/crear-cliente.html
+++ b/src/app/modules/clientes/pages/crear-cliente/crear-cliente.html
@@ -100,7 +100,7 @@
 
             <!-- Botones -->
             <div class="form-actions">
-                <button type="button" class="btn btn-secondary" routerLink="/clientes/historial-clinico">
+                <button type="button" class="btn btn-secondary" (click)="cancelar()">
                     Cancelar
                 </button>
                 <button type="submit" class="btn btn-primary" [disabled]="clienteForm.invalid">
