--- a/src/app/modules/caja-chica/pages/ver-caja/ver-caja.html
+++ b/src/app/modules/caja-chica/pages/ver-caja/ver-caja.html
@@ -86,7 +86,7 @@
                                 <th class="text-right">Monto</th>
                                 <th class="text-right">Saldo</th>
                                 <th>Comprobante</th>
-                                <th class="text-right">Acciones</th>
+                                <th class="text-right" *ngIf="esAdmin">Acciones</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -108,7 +108,7 @@
                                 </td>
                                 <td class="text-right font-bold">{{ formatoMoneda(mov.saldo_nuevo) }}</td>
                                 <td>{{ mov.comprobante || '-' }}</td>
-                                <td class="text-right">
+                                <td class="text-right" *ngIf="esAdmin">
                                     <button class="btn-icon-delete" *ngIf="caja?.estado === 'ABIERTA'" title="Eliminar movimiento" (click)="eliminarMovimiento(mov.id!)">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-trash-icon lucide-trash"><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"/><path d="M3 6h18"/><path d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/></svg>
                   </button>
